--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@doctorx/theme": "^1.0.0",
+    "minimist": "^1.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
